# new-project-template

./: .paul-project.yml  CHANGELOG.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: policy-check.yml
